# AI_DATA_ANALYST

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: .eslintrc.json  .gitignore  Makefile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx
frontend/components/result/: ChartView.tsx  DataTable.tsx  InsightCard.tsx  ResultCard.tsx  SQLDisplay.tsx  index.ts
frontend/components/state/: ErrorState.tsx  LoadingState.tsx  index.ts
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/hooks/: useNL2SQL.ts
frontend/lib/: api.ts  types.ts
src/: __init__.py  exceptions.py  main.py
src/core/: __init__.py  audit.py  config.py  database.py  logging.py  rate_limit.py
src/models/: __init__.py  queries.py  schema.py
src/services/: __init__.py  executor.py  insight.py  llm.py  nl2sql.py  schema.py  validator.py
src/utils/: __init__.py  cache.py
tests/: conftest.py
tests/unit/: test_api.py  test_audit.py  test_cache.py  test_config.py  test_exceptions.py  test_executor.py  test_insight.py  test_llm.py  test_models.py  test_nl2sql.py  test_rate_limit.py  test_schema.py  test_validator.py
